--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "compile": "hardhat compile",
+    "compile": "hardhat compile && npm run export-abis",
+    "export-abis": "ts-node scripts/export-abis.ts",
     "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
-    "seed:sepolia": "hardhat run scripts/seed-patterns.ts --network sepolia"
+    "seed:sepolia": "hardhat run scripts/seed-patterns.ts --network sepolia",
+    "test": "hardhat test",
+    "test:contracts": "hardhat test test/contracts.test.ts",
+    "test:permissions": "hardhat test test/permissions.test.ts",
+    "test:integration": "hardhat test test/integration.test.ts",
+    "test:coverage": "hardhat coverage",
+    "envio:codegen": "cd indexer && npm run codegen",
+    "envio:build": "cd indexer && npm run build",
+    "envio:deploy": "cd indexer && npm run deploy",
+    "setup": "npm install && npm run compile",
+    "deploy:all": "npm run deploy:sepolia && npm run seed:sepolia && npm run envio:codegen && npm run envio:build",
+    "verify": "hardhat verify --network sepolia"
   },
   "dependencies": {
     "@metamask/sdk-react": "^0.28.0",
@@ -45,20 +57,32 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@openzeppelin/contracts": "^5.0.2",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.3.11",
     "@types/d3": "^7.4.3",
+    "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "@types/three": "^0.161.2",
     "autoprefixer": "^10.4.17",
+    "chai": "^4.4.1",
     "dotenv": "^16.4.1",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "hardhat": "^2.19.4",
+    "hardhat-gas-reporter": "^1.0.9",
     "postcss": "^8.4.35",
+    "solidity-coverage": "^0.8.5",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typechain": "^8.3.2",
     "typescript": "^5.3.3"
   }
 }
